Se intenta agregar un nuevo color

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-ucp",
+  "name": "chat-universidad-catolica-de-pereira",
   "version": "0.1.0",
   "private": true,
   "scripts": {
