--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.14.6",
     "material-design-icons-iconfont": "^5.0.1",
+    "push.js": "^1.0.12",
     "react-facebook-login": "^4.1.1",
     "roboto-fontface": "*",
     "uuidv4": "^6.1.0",
